--- a/public/test.html
+++ b/public/test.html
@@ -377,6 +377,9 @@
         }
       }catch{}
       refreshSummary();
+      // محاولة تعبئة أولية إذا كانت القيم كاملة
+      await new Promise(r=>setTimeout(r,0));
+      schedulePrefillCheck();
     }
 
     /* ====== الحالة العامة ====== */
@@ -424,9 +427,15 @@
     }
 
     /* ربط تغييرات رأس الصفحة */
-    document.getElementById('collegeSelect').addEventListener('change',e=>{state.college=e.target.value;refreshSummary();});
-    document.getElementById('committeeSelect').addEventListener('change',e=>{state.committee_name=e.target.value;refreshSummary();});
-    document.getElementById('termSelect').addEventListener('change',e=>{state.term=e.target.value;refreshSummary();});
+    document.getElementById('collegeSelect').addEventListener('change',e=>{
+      state.college=e.target.value;refreshSummary();schedulePrefillCheck();
+    });
+    document.getElementById('committeeSelect').addEventListener('change',e=>{
+      state.committee_name=e.target.value;refreshSummary();schedulePrefillCheck();
+    });
+    document.getElementById('termSelect').addEventListener('change',e=>{
+      state.term=e.target.value;refreshSummary();schedulePrefillCheck();
+    });
     const ayInput = document.getElementById('academicYearInput');
     ayInput.addEventListener('input',()=>{
       const v = ayInput.value.trim();
@@ -435,6 +444,7 @@
       if (ok){ ayInput.classList.remove('is-invalid'); state.academicYear=v; }
       else   { ayInput.classList.add('is-invalid'); state.academicYear=''; }
       refreshSummary();
+      if(ok) schedulePrefillCheck();
     });
 
     /* ====== تحقق الروابط ====== */
@@ -534,7 +544,8 @@
     });
 
     /* ====== القوائم المتعددة ====== */
-    function addMultiUrlRow(listEl, arrRef){
+    // 🔁 نسخة مطوّرة: تدعم عنصرًا تمهيديًا initialItem للتهيئة من قاعدة البيانات
+    function addMultiUrlRow(listEl, arrRef, initialItem = null){
       const row=document.createElement('div');
       row.className='list-row';
       row.innerHTML=`
@@ -558,10 +569,17 @@
       const delBtn=row.querySelector('.actions .btn');
       const driveBtn=row.querySelector('.btn-drive-row');
 
-      const item={value:'', title:''};
+      const item={
+        value: (initialItem && initialItem.value) ? initialItem.value : '',
+        title: (initialItem && initialItem.title) ? initialItem.title : ''
+      };
       arrRef.push(item);
 
       function refreshIndex(){ idxSpan.textContent = (Array.from(listEl.children).indexOf(row)+1); }
+
+      // تعبئة أولية في الـDOM إن وُجدت
+      if(item.value){ urlInput.value=item.value; }
+      if(item.title){ titleInput.value=item.title; }
 
       urlInput.addEventListener('input',()=>{
         const v=urlInput.value.trim();
@@ -590,6 +608,99 @@
     document.getElementById('addInvitationBtn').addEventListener('click',()=>addMultiUrlRow(document.getElementById('invitationsList'), state.invitations));
     document.getElementById('addMinuteBtn').addEventListener('click',()=>addMultiUrlRow(document.getElementById('minutesList'), state.minutes));
     document.getElementById('addCoverageBtn').addEventListener('click',()=>addMultiUrlRow(document.getElementById('coverageList'), state.coverage_letters));
+
+    /* ====== Helpers للتهيئة من قاعدة البيانات ====== */
+    function setSingleInputAndState(inputId, stateKey, urlObj){
+      const el=document.getElementById(inputId);
+      if(urlObj && urlObj.value){
+        el.value = urlObj.value;
+        el.classList.remove('is-invalid');
+        state[stateKey] = { type:'url', value:urlObj.value, title: urlObj.title || '' };
+      }else{
+        // لا نُفرّغ شيئًا تلقائيًا إذا لم يوجد سجل — نحافظ على إدخالات المستخدم
+        // (بالتالي لا تغيير هنا على الإطلاق)
+      }
+      // إطلاق input حتى لو لم نغيّر، لضمان التحقق/التلخيص
+      el.dispatchEvent(new Event('input'));
+    }
+    function rebuildMultiList(listElId, arrRef, items){
+      const listEl = document.getElementById(listElId);
+      // نملأ القائمة بالعناصر القادمة من DB فقط إن كانت موجودة
+      if (Array.isArray(items) && items.length){
+        listEl.innerHTML = '';
+        arrRef.length = 0;
+        items.forEach(it => addMultiUrlRow(listEl, arrRef, it));
+      }
+      refreshSummary();
+    }
+
+    /* ====== التهيئة التلقائية من قاعدة البيانات ====== */
+    let prefillReqCounter = 0;
+    async function tryPrefillFromDB(){
+      // يجب اكتمال الأربع قيم وصحة العام الجامعي
+      const ayOk = state.academicYear && validateAcademicYear(state.academicYear).ok;
+      if(!(state.college && state.committee_name && state.term && ayOk)) return;
+
+      const myReq = ++prefillReqCounter;
+
+      // مؤشر بصري خفيف: لا يغيّر حالة الاتصال الفعلية
+      const badge = document.getElementById('gdriveState');
+      const oldBadgeText = badge.textContent;
+      badge.textContent = 'جارِ التحقق...';
+
+      try{
+        const params = new URLSearchParams({
+          college: state.college,
+          committee_name: state.committee_name,
+          academicYear: state.academicYear,
+          term: state.term,
+          limit: '1'
+        });
+        const r = await apiFetch(`/api/committees-files?${params.toString()}`, { method:'GET' });
+
+        // لو جاء طلب أحدث، تجاهل الرد القديم
+        if (myReq !== prefillReqCounter) return;
+
+        if(!r.ok){
+          badge.textContent = oldBadgeText;
+          return;
+        }
+        const j = await r.json().catch(()=>null);
+        const doc = j && Array.isArray(j.data) && j.data.length ? j.data[0] : null;
+
+        if(doc){
+          // تعبئة المفرد
+          setSingleInputAndState('fdUrl', 'formation_decision', doc.formation_decision || null);
+          setSingleInputAndState('wpUrl', 'work_plan', doc.work_plan || null);
+          setSingleInputAndState('r1Url', 'report1', doc.report1 || null);
+          setSingleInputAndState('r2Url', 'report2', doc.report2 || null);
+          setSingleInputAndState('r3Url', 'report3', doc.report3 || null);
+          setSingleInputAndState('saUrl', 'statistical_analysis', doc.statistical_analysis || null);
+
+          // تعبئة القوائم المتعددة (لن نُفرغها إن لم توجد عناصر)
+          rebuildMultiList('invitationsList', state.invitations, doc.invitations || []);
+          rebuildMultiList('minutesList', state.minutes, doc.minutes || []);
+          rebuildMultiList('coverageList', state.coverage_letters, doc.coverage_letters || []);
+
+          toastSuccess.show(); // تلميح نجاح بسيط
+        }else{
+          // لا يوجد سجل — لا نلمس إدخالات المستخدم (لا تفريغ تلقائي)
+        }
+
+      }catch(e){
+        console.error('Prefill error:', e);
+      }finally{
+        badge.textContent = oldBadgeText;
+        refreshSummary();
+      }
+    }
+
+    /* ====== Debounce لاستدعاء التهيئة ====== */
+    let prefillTimer = null;
+    function schedulePrefillCheck(){
+      clearTimeout(prefillTimer);
+      prefillTimer = setTimeout(tryPrefillFromDB, 300);
+    }
 
     /* ====== حفظ/تفريغ ====== */
     function buildPayload(){
@@ -649,6 +760,7 @@
       }catch(e){ console.error(e); toastError.show(); }
     });
 
+    // تفريغ عند النقر فقط (لا تفريغ تلقائي إطلاقًا)
     document.getElementById('resetBtn').addEventListener('click',()=>location.reload());
 
     /* ====== بدء التشغيل ====== */
@@ -656,7 +768,7 @@
       try{
         await ensureAuth();
         await loadDatalists();
-        await loadDefaultsFromSettings(); // تعبئة العام/الفصل إن كانا محفوظين
+        await loadDefaultsFromSettings(); // تعبئة العام/الفصل إن كانا محفوظين + محاولة تهيئة
         refreshSummary();
         setGDriveState(false);
       }catch{}
