--- a/public/committees-home.html
+++ b/public/committees-home.html
@@ -8,22 +8,22 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@latest/font/bootstrap-icons.css">
   <style>
-.user-chip{
-  display:inline-flex;
-  align-items:center;
-  gap:.25rem;
-  font-size:1rem;
-  padding:.375rem .75rem;
-  line-height:1.5;
-  border-radius:.375rem
-}
-body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
-.container{max-width:1100px;margin-top:40px}
-.card-link{display:block;text-decoration:none;color:inherit;border-radius:16px;box-shadow:0 6px 18px rgba(0,0,0,.08);transition:.2s}
-.card-link:hover{transform:translateY(-3px);box-shadow:0 8px 24px rgba(0,0,0,.12)}
-.icon{font-size:38px}
-.admin-only{display:none}
-.user-chip{font-size:.9rem}
+    .user-chip{
+      display:inline-flex;
+      align-items:center;
+      gap:.25rem;
+      font-size:1rem;
+      padding:.375rem .75rem;
+      line-height:1.5;
+      border-radius:.375rem
+    }
+    body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
+    .container{max-width:1100px;margin-top:40px}
+    .card-link{display:block;text-decoration:none;color:inherit;border-radius:16px;box-shadow:0 6px 18px rgba(0,0,0,.08);transition:.2s}
+    .card-link:hover{transform:translateY(-3px);box-shadow:0 8px 24px rgba(0,0,0,.12)}
+    .icon{font-size:38px}
+    .admin-only{display:none}
+    .user-chip{font-size:.9rem}
   </style>
 </head>
 <body>
@@ -116,6 +116,24 @@ body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
           <p class="mb-0 text-muted">يفتح في تبويب جديد</p>
         </a>
       </div>
+
+      <!-- ✅ NEW: إضافة روابط ملفات اللجان (يظهر للجميع) -->
+      <div class="col-12 col-sm-6 col-lg-4">
+        <a href="/committees-files-add.html" class="card-link p-4 bg-white d-block h-100">
+          <div class="icon text-primary"><i class="bi bi-link-45deg"></i></div>
+          <h5 class="mt-3">إضافة روابط ملفات اللجان</h5>
+          <p class="mb-0 text-muted">إدخال وحفظ روابط المستندات لكل لجنة</p>
+        </a>
+      </div>
+
+      <!-- ✅ NEW: عرض روابط ملفات اللجان (admin & user فقط) -->
+      <div class="col-12 col-sm-6 col-lg-4" data-role-visible="admin,user">
+        <a href="/committees-files-show.html" class="card-link p-4 bg-white d-block h-100">
+          <div class="icon text-success"><i class="bi bi-collection"></i></div>
+          <h5 class="mt-3">عرض روابط ملفات اللجان</h5>
+          <p class="mb-0 text-muted">تصفّح وفتح الروابط بحسب الكلية/العام/الفصل/اللجنة</p>
+        </a>
+      </div>
     </div>
   </div>
 
@@ -169,12 +187,14 @@ body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
       document.getElementById('userRole').textContent = roleShown;
 
       const cols = document.querySelectorAll('.row.g-4 > [class^="col-"]');
+
+      // helper لإظهار العناصر حسب دالة مطابقة
       function showBy(fn){
         cols.forEach(col => {
           const a = col.querySelector('a.card-link');
           if (!a) return;
           const href = a.getAttribute('href') || '';
-          col.style.display = fn(href) ? '' : 'none';
+          col.style.display = fn(href, col) ? '' : 'none';
         });
       }
 
@@ -185,26 +205,30 @@ body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
         return;
       }
 
-      // user يرى إدخال تقييم + العرض العام + إدارة تقييم اللجان (كما طلبت)
+      // user: يرى إدخال التقييم + العرض العام + إدارة تقييم اللجان
+      //      + إضافة روابط اللجان + عرض روابط اللجان
       if (roleRaw === 'user') {
-        showBy(href =>
+        showBy((href, col) =>
           /\/add_evaluation\.html\b/.test(href) ||
           /\/evaluations_dashboard\.html\b/.test(href) ||
-          /manage_committees\.html\b/.test(href)
+          /manage_committees\.html\b/.test(href) ||
+          /\/committees-files-add\.html\b/.test(href) ||
+          /\/committees-files-show\.html\b/.test(href)
         );
         return;
       }
 
-      // subuser-member يرى العرض العام فقط
+      // subuser-member: يرى العرض العام + إضافة روابط اللجان فقط
       if (roleRaw === 'subuser-member') {
-        showBy(href =>
-          /\/evaluations_dashboard\.html\b/.test(href)
+        showBy((href, col) =>
+          /\/evaluations_dashboard\.html\b/.test(href) ||
+          /\/committees-files-add\.html\b/.test(href)
         );
         return;
       }
 
       // أي دور آخر غير معروف: العرض العام فقط
-      showBy(href =>
+      showBy((href) =>
         /\/evaluations_dashboard\.html\b/.test(href)
       );
     }
