--- a/public/committees-home.html
+++ b/public/committees-home.html
@@ -121,7 +121,7 @@
       <div class="col-12 col-sm-6 col-lg-4">
         <a href="/committees-files-add.html" class="card-link p-4 bg-white d-block h-100">
           <div class="icon text-primary"><i class="bi bi-link-45deg"></i></div>
-          <h5 class="mt-3">إضافة روابط ملفات اللجان</h5>
+          <h5 class="mt-3">إضافة ملفات اللجان</h5>
           <p class="mb-0 text-muted">إدخال وحفظ روابط المستندات لكل لجنة</p>
         </a>
       </div>
