--- a/public/committees-home.html
+++ b/public/committees-home.html
@@ -130,7 +130,7 @@
       <div class="col-12 col-sm-6 col-lg-4" data-role-visible="admin,user">
         <a href="/committees-files-show.html" class="card-link p-4 bg-white d-block h-100">
           <div class="icon text-success"><i class="bi bi-collection"></i></div>
-          <h5 class="mt-3">عرض روابط ملفات اللجان</h5>
+          <h5 class="mt-3">عرض ملفات اللجان</h5>
           <p class="mb-0 text-muted">تصفّح وفتح الروابط بحسب الكلية/العام/الفصل/اللجنة</p>
         </a>
       </div>
